--- a/css/ofertas.css
+++ b/css/ofertas.css
@@ -1,16 +1,12 @@
-.page-description {
-    color: var(--color-light);
-}
-
-.section-badge {
-    color: var(--color-light);
-}
-
-
 .page-header h2 {
-    color: #fff;
+  font-size: 2.8rem;
+  color: var(--color-accent-light);
 }
 
+.page-description {
+  font-size: 1.2rem;
+  color: var(--color-accent-light);
+}
 
 .filtros-section {
   padding: 4rem 0;
@@ -60,6 +56,10 @@
   background: var(--color-light);
 }
 
+.ofertas-destacadas h3 {
+  margin-bottom: 1.5rem;
+}
+
 .ofertas-grid-destacadas {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
@@ -106,6 +106,12 @@
   position: relative;
 }
 
+.oferta-image-grande img {
+  width: 50%;
+  height: 50%;
+  object-fit: contain;
+}
+
 .oferta-emoji {
   font-size: 5rem;
 }
@@ -130,7 +136,7 @@
 
 .oferta-content h4 {
   color: var(--color-primary);
-  margin-bottom: 1rem;
+  margin-top: 1rem;
 }
 
 .oferta-descripcion {
@@ -185,13 +191,12 @@
 }
 
 .page-header {
-    background: var(--color-secondary-dark);
-    padding: 2rem 0;
-    text-align: center;
-    position: relative;
-    overflow: hidden;
+  background: var(--color-secondary-dark);
+  padding: 2rem 0;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
 }
-
 
 .oferta-header {
   background: linear-gradient(
@@ -213,6 +218,7 @@
 
 .oferta-tag {
   background: rgb(0 0 0 / 20%);
+  width: fit-content;
   padding: 0.5rem 1rem;
   border-radius: 20px;
   font-size: 0.85rem;
@@ -263,10 +269,10 @@
 }
 
 .beneficio-icon img {
-    width: 60px;
-    height: auto;
-    display: block;
-    margin: 0 auto;
+  width: 60px;
+  height: auto;
+  display: block;
+  margin: 0 auto;
 }
 
 .beneficios-grid {
